--- a/Ejercicio2/index.html
+++ b/Ejercicio2/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <tile>Mi Receta</tile>
+    <meta charset="utf-8" />
+    <title>Mi Receta</title>
   </head>
   <body>
-    <h1>Mi Receta</h1>
+    <h1>Receta: Ensalada</h1>
+    <img src="https://s3.amazonaws.com/makeitreal/salad.png" alt="img" />
+    <h2>Ingredientes:</h2>
+    <p>
+      Los ingredientes necesarios para preparar la ensalada son los siguentes
+    </p>
+    <ul>
+      <li>Pechuga</li>
+      <li>Lechuga</li>
+      <li>Tomate</li>
+      <li>Cebolla</li>
+      <li>Maiz</li>
+    </ul>
+    <h2>Preparacion:</h2>
+    <p>Se pican todos los ingredientes, se mezclan y listo!</p>
     <a href="https://www.google.com">Buscar</a>
   </body>
 </html>
